--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "test-app",
-  "version": "1.0.0",
-  "description": "A simple test app",
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.0.1",
+    "selenium-webdriver": "^4.34.0"
+  },
+  "scripts": {
+    "test": "mocha tests/*.js"
   }
 }
