--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
     "chai": "^5.1.2",
+    "eslint": "^8.57.1",
+    "eslint-plugin-no-unsanitized": "^4.1.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-security-node": "^1.1.4",
     "mocha": "^11.0.1",
     "selenium-webdriver": "^4.34.0"
   },
